[gd_scene load_steps=3 format=3 uid="uid://23365eoul53x"]

[ext_resource type="Script" path="res://Assets/Scenes/Scripts/pause_menu.gd" id="1_mbdqh"]
[ext_resource type="Theme" uid="uid://yhbsh4ritb6r" path="res://Assets/button_theme.tres" id="2_a4es5"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mbdqh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MainLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 46
text = "Pause Menu"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 64

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a4es5")
text = "Return To Game"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a4es5")
text = "Save Game"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a4es5")
text = "Quit To Main Menu"

[node name="VerticalInvert" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Vertical Input Toggle
"

[node name="HorizontalInvert" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Horizontal Input Toggle
"

[connection signal="button_down" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Save" to="." method="_on_save_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/VerticalInvert" to="." method="_on_vertical_invert_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VerticalInvert" to="." method="_on_vertical_invert_button_up"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HorizontalInvert" to="." method="_on_horizontal_invert_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HorizontalInvert" to="." method="_on_horizontal_invert_button_up"]
